certifications/jakarta-authorization/1.6/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Authorization.

# Eclipse Fish 5.1 Certification Request

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
  Includes Authorization 1.6.1
- Specification Name, Version and download URL: <br/>
  [Jakarta Authorization, 1.6](https://jakarta.ee/specifications/authorization/1.6/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Authorization TCK 1.5.0](http://download.eclipse.org/ee4j/jakartaee-tck/jakartaee8-eftl/promoted/eclipse-authorization-tck-1.5.0.zip), SHA-256: `81373a045b7bb187989eafbf6c4be5b6f7f28d25cdbdae03e2fcf343889f77f2`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7


Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 24 tests.
[javatest.batch] Number of Tests Passed      = 24
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```
